<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pool-score-keeper</string>
    <string name="game_chooser_screen_content">Let\'s Play Pool</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_straight_pool">Scoring Straight Pool</string>
    <string name="title_activity_straight_pool_start">Let\'s Play Straight Pool</string>
    <string name="cowboy_pool_button">Cowboy</string>
    <string name="playing_straight_pool_screen_content">Playing Straight Pool</string>
    <string name="straight_pool_button">Straight Pool</string>
    <string name="straight_pool_start_content">Who is playing?</string>
    <string name="straight_pool_rules_button">Straight Pool Rules</string>
    <string name="straight_pool_default_points_to_win">50</string>
    <string name="shot_made">Shot Made</string>
    <string name="safe_made">Safe Made</string>
    <string name="safe_missed">Safe Missed</string>
    <string name="missed_shot">Shot Missed</string>
    <string name="foul">Foul</string>
    <string name="total_points">Total Points</string>
    <string name="current_rack_total">Current Rack</string>
    <string name="safes_made">Safes Made</string>
    <string name="safes_missed">Safes Missed</string>
    <string name="consecutive_safes_made">Consecutive Safes</string>
    <string name="current_run">Current Run</string>
    <string name="longest_run">Longest Run</string>
    <string name="consecutive_balls">Consecutive Balls</string>
    <string name="game_total">Current Totals</string>
    <string name="default_player1Name">Minnesota Fats</string>
    <string name="default_player2Name">Fast Eddie</string>
    <string name="consecutive_fouls">Consecutive Fouls</string>
    <string name="total_fouls">Total Fouls</string>
    <string name="missed_shot_total">Total missed shots</string>
    <string name="undo">Undo</string>
    <string name="players">Players</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="swap_players">Swap Players</string>
    <string name="whos_playing_title">Who\'s playing?</string>
    <string name="points_to_win">Points to Win?</string>
    <string name="points_needed">Needed to Win</string>
    <string name="play_new_game">Start New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="general_pool_rules_button">General Rules of Pool</string>
    <string name="new_game_button">New Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Straight Pool Rules and Extras</string>
    <string name="title_activity_score_straight_pool">Straight Pool Score Board</string>
    <string name="new_rack">New Rack</string>
    <string name="blank_button"></string>
    <string name="game_summary_button">Game Summary</string>
    <string name="email_game_summary_button">Email Game Summary</string>
    <string name="default_balls_left_on_the_table">15 balls on the table</string>
    <string name="balls_left_on_the_table">balls on the table</string>
    <string name="one_ball_left_on_the_table">1 ball on the table</string>
    <string name="huh">huh?</string>
    <string name="title_activity_cowboy_pool_start">CowboyPoolStartActivity</string>
    <string name="default_inning_text">Inning #1</string>
    <string name="inning_title">Inning #</string>
    <string name="title_activity_straight_pool_multi_views">StraightPoolMultiViews</string>
    <string name="action_settings">Settings</string>

</resources>