<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pool_table_felt"
    tools:context=".ScoreStraightPoolActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/HeaderRow"
            style="@style/ScoreTableRow" >

            <TextView
                style="@style/ScoreTableBlankEntry" />

            <TextView
                style="@style/ScoreTableBlankEntry" />

            <EditText
                android:id="@+id/player1Name"
                style="@style/ScoreTableHeading"
                android:text="@string/default_player1Name" >


                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/player2Name"
                style="@style/ScoreTableHeading"
                android:text="@string/default_player2Name" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/currentRackRow"
            style="@style/ScoreTableRow" >

            <Button
                android:id="@+id/shotMadeButton"
                style="@style/ScoreTableButton"
                android:onClick="shotMadeButtonClicked"
                android:text="@string/shot_made" />

            <TextView
                style="@style/ScoreTableTextEntry"
                android:text="@string/current_rack_total" />

            <TextView
                android:id="@+id/player1BallsThisRack"
                style="@style/ScoreTableNumberEntry" />

            <TextView
                android:id="@+id/player2BallsThisRack"
                style="@style/ScoreTableNumberEntry" />
        </TableRow>

        <TableRow
            android:id="@+id/totalScoreRow"
            style="@style/ScoreTableRow" >

            <Button
                android:id="@+id/missedShotButton"
                style="@style/ScoreTableButton"
                android:onClick="missedShotButtonClicked"
                android:text="@string/missed_shot" />

            <TextView
                style="@style/ScoreTableTextEntry"
                android:text="@string/game_total" />

            <TextView
                android:id="@+id/player1Score"
                style="@style/ScoreTableNumberEntry" />

            <TextView
                android:id="@+id/player2Score"
                style="@style/ScoreTableNumberEntry" />
        </TableRow>

        <TableRow
            android:id="@+id/pointsToWinRow"
            style="@style/ScoreTableRow" >

            <Button
                android:id="@+id/foulButton"
                style="@style/ScoreTableButton"
                android:onClick="foulButtonClicked"
                android:text="@string/foul" />

            <TextView
                style="@style/ScoreTableTextEntry"
                android:text="@string/points_needed" />

            <TextView
                android:id="@+id/player1PointsToWin"
                style="@style/ScoreTableNumberEntry" />

            <TextView
                android:id="@+id/player2PointsToWin"
                style="@style/ScoreTableNumberEntry" />
        </TableRow>

        <TableRow
            android:id="@+id/consecutiveFoulsRow"
            style="@style/ScoreTableRow" >

            <Button
                android:id="@+id/undoButton"
                style="@style/ScoreTableButton"
                android:onClick="newRackButtonClicked"
                android:text="@string/new_rack" />

            <TextView
                style="@style/ScoreTableTextEntry"
                android:text="@string/consecutive_fouls" />

            <TextView
                android:id="@+id/player1ConsecutiveFouls"
                style="@style/ScoreTableNumberEntry" />

            <TextView
                android:id="@+id/player2ConsecutiveFouls"
                style="@style/ScoreTableNumberEntry" />
        </TableRow>

        <TableRow
            android:id="@+id/totalFoulsRow"
            style="@style/ScoreTableRow" >

            <TextView
                style="@style/ScoreTableBlankEntry" />

            <TextView
                style="@style/ScoreTableTextEntry"
                android:text="@string/total_fouls" />

            <TextView
                android:id="@+id/player1TotalFouls"
                style="@style/ScoreTableNumberEntry" />

            <TextView
                android:id="@+id/player2TotalFouls"
                style="@style/ScoreTableNumberEntry" />
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/Button01"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showGeneralPoolRules"
                android:text="@string/general_pool_rules_button" />

            <Button
                android:id="@+id/dummy_button"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showStraightPoolRules"
                android:text="@string/straight_pool_rules_button" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>