<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pool_table_felt"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScoreStraightPoolActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <FrameLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center_horizontal" >

                        <TableRow
                            android:id="@+id/HeaderRow"
                            style="@style/ScoreTableRow" >

                            <TextView
                                android:id="@+id/inning"
                                style="@style/ScoreTableTextEntry"
                                android:text="@string/default_inning_text" />

                            <EditText
                                android:id="@+id/player1Name"
                                style="@style/ScoreTableHeading"
                                android:text="@string/default_player1Name" >

                                <requestFocus />
                            </EditText>

                            <EditText
                                android:id="@+id/player2Name"
                                style="@style/ScoreTableHeading"
                                android:text="@string/default_player2Name" >
                            </EditText>
                        </TableRow>

                        <TableRow
                            android:id="@+id/currentRackRow"
                            style="@style/ScoreTableRow" >

                            <TextView
                                style="@style/ScoreTableTextEntry"
                                android:text="@string/current_rack_total" />

                            <TextView
                                android:id="@+id/player1BallsThisRack"
                                style="@style/ScoreTableNumberEntry" />

                            <TextView
                                android:id="@+id/player2BallsThisRack"
                                style="@style/ScoreTableNumberEntry" />

                            <TextView
                                android:id="@+id/ballsOnTheTable"
                                style="@style/ScoreTableTextEntry"
                                android:text="@string/default_balls_left_on_the_table" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/totalScoreRow"
                            style="@style/ScoreTableRow" >

                            <TextView
                                style="@style/ScoreTableTextEntry"
                                android:text="@string/game_total" />

                            <TextView
                                android:id="@+id/player1Score"
                                style="@style/ScoreTableNumberEntry" />

                            <TextView
                                android:id="@+id/player2Score"
                                style="@style/ScoreTableNumberEntry" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/pointsToWinRow"
                            style="@style/ScoreTableRow" >

                            <TextView
                                style="@style/ScoreTableTextEntry"
                                android:text="@string/points_needed" />

                            <TextView
                                android:id="@+id/player1PointsToWin"
                                style="@style/ScoreTableNumberEntry" />

                            <TextView
                                android:id="@+id/player2PointsToWin"
                                style="@style/ScoreTableNumberEntry" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/consecutiveFoulsRow"
                            style="@style/ScoreTableRow" >

                            <TextView
                                style="@style/ScoreTableTextEntry"
                                android:text="@string/consecutive_fouls" />

                            <TextView
                                android:id="@+id/player1ConsecutiveFouls"
                                style="@style/ScoreTableNumberEntry" />

                            <TextView
                                android:id="@+id/player2ConsecutiveFouls"
                                style="@style/ScoreTableNumberEntry" />
                        </TableRow>
                    </TableLayout>

                    <LinearLayout
                        style="@style/ButtonBar"
                        android:background="@color/black_overlay" >

                        <Button
                            android:id="@+id/shotMadeButton"
                            style="@style/ButtonBarButton"
                            android:onClick="shotMadeButtonClicked"
                            android:text="@string/shot_made" />

                        <Button
                            android:id="@+id/safeMadeButton"
                            style="@style/ButtonBarButton"
                            android:onClick="safeMadeButtonClicked"
                            android:text="@string/safe_made" />

                        <Button
                            android:id="@+id/missedShotButton"
                            style="@style/MissButton"
                            android:onClick="missedShotButtonClicked"
                            android:text="@string/missed_shot" />

                        <Button
                            android:id="@+id/missedSafeButton"
                            style="@style/MissButton"
                            android:onClick="missedSafeButtonClicked"
                            android:text="@string/safe_missed" />

                        <Button
                            android:id="@+id/foulButton"
                            style="@style/MissButton"
                            android:onClick="foulButtonClicked"
                            android:text="@string/foul" />

                        <Button
                            android:id="@+id/newRackButton"
                            style="@style/ButtonBarButton"
                            android:onClick="newRackButtonClicked"
                            android:text="@string/new_rack" />
                    </LinearLayout>
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>